--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Calculator/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Calculator/Themes/Generic.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Microsoft.Windows.Controls">
+                    xmlns:local="clr-namespace:Microsoft.Windows.Controls"
+                    xmlns:coreConverters="clr-namespace:Microsoft.Windows.Controls.Core.Converters" >
+
+    <coreConverters:CalculatorMemoryToVisibilityConverter x:Key="CalculatorMemoryToVisibilityConverter" />
 
     <Style x:Key="CalculatorOperatorButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="Focusable" Value="False"/>
@@ -469,11 +472,18 @@
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             <Border x:Name="PART_Display" Margin="0,0,0,10" Background="White" BorderBrush="#FF949494" BorderThickness="1">
-                                <TextBlock FontSize="16"
+                                    <StackPanel>
+                                        <Path Stretch="Fill" Height="9" Width="9" Fill="DarkGray"
+                                              Data="F1 M 508.172,390L 506.031,390L 504.612,393.385C 504.174,394.477 503.788,395.533 503.453,396.555L 503.417,396.555C 503.334,395.528 503.206,394.471 503.035,393.385L 502.454,390L 500.301,390L 498.637,399L 500.226,399L 500.807,395.537C 500.903,394.973 501,394.379 501.099,393.756C 501.198,393.133 501.287,392.534 501.367,391.957L 501.402,391.957C 501.444,392.514 501.499,393.08 501.567,393.655C 501.635,394.231 501.712,394.776 501.8,395.292L 502.382,398.871L 503.7,398.871L 505.231,395.233C 505.445,394.724 505.663,394.187 505.884,393.622C 506.105,393.057 506.313,392.502 506.508,391.957L 506.543,391.957C 506.411,393.11 506.304,394.292 506.223,395.502L 505.979,399L 507.637,399L 508.172,390 Z "
+                                              HorizontalAlignment="Left" VerticalAlignment="Top"                                              
+                                              Margin="4,4,0,0"
+                                              Visibility="{Binding Memory, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource CalculatorMemoryToVisibilityConverter}}"/>
+                                        <TextBlock FontSize="18"
                                            HorizontalAlignment="Right"
-                                           Margin="2"
+                                           Margin="0,0,4,0"
                                            Text="{Binding DisplayText, RelativeSource={RelativeSource TemplatedParent}}" />
-                            </Border>
+                                    </StackPanel>
+                                </Border>
                             <ContentControl x:Name="PART_CalculatorButtonPanel" Grid.Row="1" Template="{StaticResource CalculatorButtonPanel}" DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}}" />
                         </Grid>
                     </Border>
