--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Calculator/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Calculator/Themes/Generic.xaml
@@ -302,144 +302,144 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Button Grid.Column="0" Grid.Row="0" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="MC"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="MC"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="2" Grid.Row="0" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="MR" 
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
-
-            <Button Grid.Column="4" Grid.Row="0" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Back" 
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
-
-            <Button Grid.Column="6" Grid.Row="0" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Cancel" 
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorClearButtonStyle}"/>
-
-            <Button Grid.Column="8" Grid.Row="0" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Clear"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorClearButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="MR" 
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="0" Grid.Row="2" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="MS"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Back" 
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}" Grid.RowSpan="1"/>
 
             <Button Grid.Column="2" Grid.Row="2" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="MAdd"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Cancel" 
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorClearButtonStyle}"/>
 
             <Button Grid.Column="4" Grid.Row="2" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="MSub"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Clear"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorClearButtonStyle}" Grid.ColumnSpan="1" Grid.RowSpan="1"/>
+
+            <Button Grid.Column="4" Grid.Row="0" MinWidth="28" MinHeight="26"
+					local:Calculator.CalculatorButtonType="MS"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+
+            <Button Grid.Column="6" Grid.Row="0" MinWidth="28" MinHeight="26"
+					local:Calculator.CalculatorButtonType="MAdd"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}" Margin="0"/>
+
+            <Button Grid.Column="8" Grid.Row="0" MinWidth="28" MinHeight="26"
+					local:Calculator.CalculatorButtonType="MSub"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="6" Grid.Row="2" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Negate"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Negate"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="8" Grid.Row="2" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Sqrt"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Sqrt"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="0" Grid.Row="4" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Seven"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Seven"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="2" Grid.Row="4" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Eight"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Eight"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="4" Grid.Row="4" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Nine"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Nine"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="6" Grid.Row="4" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Divide"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Divide"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="8" Grid.Row="4" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Percent"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Percent"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="0" Grid.Row="6" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Four"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Four"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="2" Grid.Row="6" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Five"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Five"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="4" Grid.Row="6" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Six"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Six"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="6" Grid.Row="6" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Multiply"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Multiply"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="8" Grid.Row="6" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Fraction"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Fraction"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="0" Grid.Row="8" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="One"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"                                    
-                                    Style="{StaticResource CalculatorDigitButtonStyle}" />
+					local:Calculator.CalculatorButtonType="One"
+					Command="local:CalculatorCommands.CalculatorButtonClick"                                    
+					Style="{StaticResource CalculatorDigitButtonStyle}" />
 
             <Button Grid.Column="2" Grid.Row="8" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Two"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Two"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="4" Grid.Row="8" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Three"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Three"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}"/>
 
             <Button Grid.Column="6" Grid.Row="8" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Subtract"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Subtract"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="8" Grid.Row="8" Grid.RowSpan="3" MinWidth="28" MinHeight="55"
-                                    local:Calculator.CalculatorButtonType="Equal"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+					local:Calculator.CalculatorButtonType="Equal"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
 
             <Button Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="3" MinWidth="59" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Zero"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}" />
+					local:Calculator.CalculatorButtonType="Zero"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}" />
 
             <Button Grid.Column="4" Grid.Row="10" MinWidth="28" MinHeight="26"
-                                    local:Calculator.CalculatorButtonType="Decimal"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorDigitButtonStyle}" />
+					local:Calculator.CalculatorButtonType="Decimal"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorDigitButtonStyle}" />
 
-            <Button Grid.Column="6" Grid.Row="10" MinWidth="28" MinHeight="26" x:Name="Add"
-                                    local:Calculator.CalculatorButtonType="Add"
-                                    Command="local:CalculatorCommands.CalculatorButtonClick"
-                                    Style="{StaticResource CalculatorOperatorButtonStyle}"/>
+            <Button Grid.Column="6" Grid.Row="10" MinWidth="28" MinHeight="26"
+					local:Calculator.CalculatorButtonType="Add"
+					Command="local:CalculatorCommands.CalculatorButtonClick"
+					Style="{StaticResource CalculatorOperatorButtonStyle}"/>
         </Grid>
     </ControlTemplate>
 
@@ -488,11 +488,11 @@
                         </Grid>
                     </Border>
                     </Grid>
-                    <!--<ControlTemplate.Triggers>
+                    <ControlTemplate.Triggers>
                         <Trigger Property="IsFocused" Value="True">
                             <Setter TargetName="PART_Display" Property="Background" Value="#E7F5FF" />
                         </Trigger>
-                    </ControlTemplate.Triggers>-->
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
